Fix import of css which was accidentally creating a strange bundle file upon compilation

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "odin-js-custom-validation",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
